Fixed flex no wrap on create TC

--- a/client/src/sass/abstracts/_flex-column.scss
+++ b/client/src/sass/abstracts/_flex-column.scss
@@ -5,4 +5,5 @@
   margin-bottom: 1.8rem;
   align-content: center;
   align-items: center;
+  flex-wrap: wrap;
 }
